# pulp_deb

./: .gitignore  README.md  bootstrap.sh  owners.txt
.config/: README.txt  tsaoptions.json
.pipelines/: OneBranch.Cli.Build.yml  OneBranch.Containers.BuddyBuild.yml  OneBranch.Containers.Official.yml  OneBranch.Extension.Build.yml  OneBranch.PullRequest.yml
cli/: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg  update_role.sh
cli/changelog.d/: 13082573.feature  15947571.bugfix  16950389.feature  17315271.breaking  17315271.feature  17315276.feature  17338874.feature  17364320.feature  17397726.bugfix  17421046.feature  17428893.bugfix  17436981.bugfix  17503174.breaking  17544504.bugfix  17558832.bugfix  17627301.feature  17628171.feature  17684846.feature  17729715.bugfix  17749074.bugfix  17749140.breaking  17798770.feature  17947782.feature  17954949.feature  18445458.bugfix  18548711.feature  18712489.bugfix  20461004.feature  24095156.bugfix  24095358.feature  24103185.feature  24107975.bugfix  24164193.bugfix
cli/pmc/: artifact_uploader.py  auth.py  client.py  constants.py  context.py  main.py  package_uploader.py  schemas.py  utils.py
cli/pmc/commands/: access.py  account.py  config.py  distribution.py  orphan.py  package.py  publication.py  publisher.py  release.py  remote.py  repo_version.py  repository.py  task.py
cli/tests/: conftest.py  simple_pulp_test.sh  utils.py
cli/tests/assets/: 3CAredacted.pem  helloworld-0.0.1-py3-none-any.whl  marinerRedacted.pem  settings.example.toml  signed-by-mariner.rpm  signed-by-other.rpm  signed-by-us-zst-compressed.deb  signed-by-us.deb  signed-by-us.rpm  unsigned.deb
cli/tests/commands/: test_access.py  test_account.py  test_config.py  test_distribution.py  test_orphan.py  test_package.py  test_publisher.py  test_release.py  test_repository.py  test_task.py
cli/tests/unittests/: test_auth.py
docs/admin/: docfx.json  index.md  toc.yml  workflows.md
docs/enghub/: docfx.json  faq.md  index.md  preview.md  toc.yml
docs/public/: index.htm  readme.txt  source.txt
edge/: README.md  akv_extension_settings.json  cachestat.py  config-activate.sh  config-install.sh  crontab  deploy-tls.sh  deploy_fetcher.sh  etc_nginx.conf  fetch-apt-metadata.py  flip-mirrors.sh  force-meta-update.sh  index.html  log-analyze  log-analyze.py  logging.conf  pmc-restart.service  purge-edge-cache.sh  push-config.sh  push-pockets.sh  push_keys.sh  restart-nginx.sh  restart.conf  template.sh  update_meta.sh  watch.sh
edge/cache-configs/: 295G.conf  74G.conf  region_map.csv
edge/sites-available/: vCurrent.conf  vNext.conf
extension-prototype/: README.md  extension_build.sh  vss-extension.json
extension-prototype/buildandrelease/: .gitignore  .npmrc  .taskkey  main.ts  package-lock.json  package.json  task.json
migrate/: cleanup.py  compare-apt-repos.py  delete-repos.py  fix-remote-upstream.py  import-accounts.sh  import-repos.sh  import-symlinks.sh  migrate_deb_signing_services.py
packages_microsoft_prod/: README.md  build.sh  clean.sh  compare.py  release.sh
pulp/: .gitignore  Dockerfile  README.md  pulp_db_init.sh  settings.py
pulp-dev/: .gitignore  Makefile  README.md  build-our-branch.sh  clone-repos.sh  compose.env  create-branch.sh  lint.sh  make-patch.sh  test.sh
server/: .env.example  .env.storage.template  .gitignore  .test_key_config  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  bootstrap.sh  docker-compose.yml  pyproject.toml  setup.cfg  setvalues.py
server/app/: logging.conf  main.py
server/app/api/: auth.py
server/app/api/routes/: access.py  account.py  api.py  artifact.py  distribution.py  orphan.py  package.py  publication.py  publisher.py  release.py  remote.py  repo_version.py  repository.py  task.py
server/app/core/: config.py  db.py  exception.py  log_config.py  models.py  schemas.py
server/app/services/: migration.py  pulp.py
server/app/services/model/: signature.py
server/app/services/package/: verify.py
server/app/services/pulp/: api.py  content_manager.py  package_lookup.py  utils.py
server/changelog.d/: 16950389.feature  17506214.feature  19563187.bugfix  20540888.feature  20702703.bugfix  24062068.bugfix  24095858.bugfix  24103185.bugfix  24104278.bugfix
server/deployment/: README.md  api-pod.yml  config.yml  entrypoint.sh  ingress.yml  log_analytics_settings.json  login-deploy.sh  migrate-aks-mariner.sh  migration.yml  ppe.sh  prod.sh  resource_creation.sh  rotate_keys.sh  shared.sh  sign_initial_account.py  tux.sh  update.sh  worker-pod.yml
server/deployment/geneva/: README.md  deploy.sh  fluentd_configs.yaml  geneva.ppe.yaml  geneva.prod.yaml
server/deployment/geneva/helm/: PMClogsVer1v0.xml  fluentd.conf  pmc-ppe.values.yaml  pmc-prod.values.yaml
server/deployment/geneva/helm/chart/: Chart.yaml
server/deployment/geneva/helm/chart/fluentd/: kubernetes.conf
server/deployment/geneva/helm/chart/templates/: geneva-services.yaml
server/dev_assets/: create_account.sh  nginx.conf
server/migrations/: env.py
server/migrations/versions/: 067f450caa29_repo_access_and_package_ownership_uniq_.py  19b2f4b674fc_account_role.py  1f2ce48deb08_changeable_oid.py  45dc84923230_add_migration_service_role.py  67e1db85fafd_adding_signature_column_to_the_account_.py  cedc71e8ee67_create_publisher_table.py
server/pulp/: README.md  settings.py
server/tests/: conftest.py  test_access.py  test_account.py  test_auth.py  test_content_manager.py  test_distribution.py  test_orphans.py  test_package.py  test_package_lookup.py  test_release.py  test_repository.py  test_task.py  utils.py
sign_cli/: README.md  sign_esrp_test.py  signlib.py
signer/: Dockerfile  README.md  config.py  entrypoint.sh  esrp.py  keyvault_util.py  main.py  signer.py  supervisord.conf  util.py  xsignextension-0.31-py2.py3-none-any.whl
status/: README.md  deploy.sh
tools/: ecrtool.py  keyvault_util.py  login-deploy.py  tux-sync.py  util.py
tux-sync/: .env-api  .env-pulp  .env-signer  README.md  dc-public-ingest.yml  docker-compose.yml  tux-sync.py  tux-sync.sh
(+176 files in other folders)
