[tool.poetry]
name = "pmc-cli"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "pmc" },
]

[tool.poetry.scripts]
pmc = "pmc.main:run"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
httpx = "^0.22.0"
Pygments = {version = "^2.11.2", optional = true}
pydantic = "^1.9.0"
tomli-w = "^1.0.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.940"
pytest = "^7.1.1"
types-Pygments = "^2.9.17"

[tool.poetry.extras]
pygments = ["Pygments"]

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
