[tool.poetry]
name = "pmc-cli"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "pmc" },
]

[tool.poetry.scripts]
pmc = "pmc.main:run"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
httpx = "^0.23.0"
Pygments = {version = "^2.13.0", optional = true}
pydantic = "^1.10.2"
tomli-w = "^1.0.0"
msal = "^1.19.0"
pyOpenSSL = "^22.1.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"
pytest = "^7.1.3"
types-Pygments = "^2.13.1"
black = "^22.8.0"
types-pyOpenSSL = "^22.1.0"

[tool.poetry.extras]
pygments = ["Pygments"]

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
