[tool.poetry]
name = "pmc-cli"
version = "1.1.0"
description = ""
authors = ["PMC Team <aztuxrepo@microsoft.com>"]
readme = "README.md"
packages = [
    { include = "pmc" },
]

[tool.poetry.scripts]
pmc = "pmc.main:run"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
Pygments = {version = "^2.13.0", optional = true}
pydantic = "^1.10.2"
tomli-w = "^1.0.0"
msal = "^1.19.0"
pyOpenSSL = "^22.1.0"
tomli = "^2.0.1"
packaging = "^23.1"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"
pytest = "^7.1.3"
types-Pygments = "^2.13.1"
black = "^22.8.0"
types-pyOpenSSL = "^22.1.0"
towncrier = "^22.12.0"
flake8-use-pathlib = "^0.3.0"
types-requests = "^2.28.11.17"

[tool.poetry.extras]
pygments = ["Pygments"]

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.towncrier]
filename = "CHANGELOG.md"
directory = "changelog.d"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://msazure.visualstudio.com/One/_artifacts/feed/Compute-PMC/PyPI/pmc-cli/overview/{version}) - {project_date}"
issue_format = "[#{issue}](https://msazure.visualstudio.com/One/_workitems/edit/{issue})"

    [[tool.towncrier.type]]
    directory = "breaking"
    name = "Breaking changes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bug fixes"
    showcontent = true
