[tool.poetry]
name = "pmcserver"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
uvicorn = "0.18.3"
python-dotenv = "^0.21.0"
httpx = "^0.23.0"
python-multipart = "^0.0.5"
sqlmodel = "^0.0.8"
asyncpg = "^0.26.0"
alembic = "^1.8.1"
email-validator = "^1.3.0"
asgi-correlation-id = "^3.1.0"
fastapi-microsoft-identity = "^0.1.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-asyncio = "^0.19"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"
black = "^22.8.0"

[tool.black]
line-length = 100
extend-exclude = "(migrations|pulp/container-assets)"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="strict"
