[tool.poetry]
name = "pmcserver"
version = "1.0.2"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
python-dotenv = "^0.21.0"
httpx = "^0.23.0"
python-multipart = "^0.0.5"
sqlmodel = "^0.0.8"
asyncpg = "^0.26.0"
alembic = "^1.8.1"
email-validator = "^1.3.0"
asgi-correlation-id = "^3.1.0"
starlette-context = "^0.3.5"
azure-keyvault-keys = "^4.8.0"
azure-identity = "^1.12.0"
pyjwt = {extras = ["crypto"], version = "^2.7.0"}
aiocache = "^0.12.1"
aioshutil = "^1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
pytest-asyncio = "^0.19"
isort = "^5.10.1"
flake8 = "^5.0.4"
black = "^22.8.0"
types-setuptools = "^67.6.0.7"
flake8-use-pathlib = "^0.3.0"
towncrier = "^22.12.0"
mypy = "1.0.1"

[tool.black]
line-length = 100
extend-exclude = "(migrations|pulp/container-assets)"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="strict"

[tool.towncrier]
filename = "CHANGELOG.md"
directory = "changelog.d"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://msazure.visualstudio.com/One/_git/Compute-PMC?version=GTserver-{version}) - {project_date}"
issue_format = "[#{issue}](https://msazure.visualstudio.com/One/_workitems/edit/{issue})"

    [[tool.towncrier.type]]
    directory = "breaking"
    name = "Breaking changes"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

    [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bug fixes"
    showcontent = true
